[package]
name = "rust_encrypt_tst"
version = "0.1.0"
authors = ["Chanceler Shaffer <shafferchance@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
aes-soft = "0.3.3"
bcrypt = "0.6.1"
hex = "0.4.0"
sha2 = "0.8.1"
wasm-bindgen = "0.2.50"
